RESOLVED FIXED90575
[BlackBerry] meta viewport initial-scale doesn't factor in device pixel ratio
https://bugs.webkit.org/show_bug.cgi?id=90575
Summary [BlackBerry] meta viewport initial-scale doesn't factor in device pixel ratio
Mike Lattanzio
Reported 2012-07-04 12:50:44 PDT
When a developer specifies a meta viewport width and initial-zoom of 1.0, they do not mean 1 CSS pixel to 1 HW pixel. Instead they mean the meta viewport width should be zoomed to fill the device's physical screen exactly. Thus we must multiply the initial-zoom specified in the meta viewport by the device pixel ratio on high DPI devices.
Attachments
Patch (3.09 KB, patch)
2012-07-04 13:09 PDT, Mike Lattanzio
no flags
Patch (3.23 KB, patch)
2012-07-09 09:40 PDT, Mike Lattanzio
no flags
Patch (5.00 KB, patch)
2012-07-09 10:48 PDT, Mike Lattanzio
no flags
Patch (5.14 KB, patch)
2012-07-09 11:08 PDT, Mike Lattanzio
no flags
Mike Lattanzio
Comment 1 2012-07-04 13:09:24 PDT
Rob Buis
Comment 2 2012-07-05 07:18:52 PDT
Comment on attachment 150837 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=150837&action=review ChangeLog can be improved a bit. > Source/WebKit/blackberry/ChangeLog:12 > + values until after the call to computeViewportAttributes. Is there a testcase/website that shows the improved behavior? If so you can state it, please also state the internal reviewers.
Mike Lattanzio
Comment 3 2012-07-09 09:40:12 PDT
Konrad Piascik
Comment 4 2012-07-09 09:46:27 PDT
Comment on attachment 151260 [details] Patch Overall looks good, but you still didn't specify a test page. It can be a manual test, which we add to the manual tests for our platform.
Mike Lattanzio
Comment 5 2012-07-09 10:48:36 PDT
Konrad Piascik
Comment 6 2012-07-09 10:52:04 PDT
Comment on attachment 151275 [details] Patch lgtm
Rob Buis
Comment 7 2012-07-09 11:06:04 PDT
Comment on attachment 151275 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=151275&action=review Looks good, please fix the ChangeLog nits before landing. > Source/WebKit/blackberry/ChangeLog:18 > + Also specify the manual test in the end please. > ChangeLog:11 > + Internal review from Konrad Piascik Lacks a period.
Mike Lattanzio
Comment 8 2012-07-09 11:08:57 PDT
Rob Buis
Comment 9 2012-07-09 11:13:07 PDT
Comment on attachment 151285 [details] Patch Looks good.
WebKit Review Bot
Comment 10 2012-07-09 12:27:27 PDT
Comment on attachment 151285 [details] Patch Clearing flags on attachment: 151285 Committed r122135: <http://trac.webkit.org/changeset/122135>
WebKit Review Bot
Comment 11 2012-07-09 12:27:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.