[BlackBerry] meta viewport initial-scale doesn't factor in device pixel ratio https://bugs.webkit.org/show_bug.cgi?id=90575

Patch by Mike Lattanzio <mlattanzio@rim.com> on 2012-07-09
Reviewed by Rob Buis.

.:

Add a manual test to verify wide content doesn't interfere
with initial-scale calculations.

Internal review from Konrad Piascik.

* ManualTests/blackberry/meta-viewport-initial-scale-wide-content.html: Added.

Source/WebKit/blackberry:

Refactor meta viewport handling to multiply the developer
specified scale properties by the devicePixelRatio. This
required moving the setting of these values until after
the call to computeViewportAttributes.

This fixes an isssue where content wider than the meta viewport
would case a zoom-out-to-fit scenario because we misinterpreted
the specified initial-scale.

New test to verify wide content doesn't affect initial-scale:
ManualTests/blackberry/meta-viewport-initial-scale-wide-content.html

Internal review from Konrad Piascik, Arvid Nilsson.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::recomputeVirtualViewportFromViewportArguments):
(BlackBerry::WebKit::WebPagePrivate::dispatchViewportPropertiesDidChange):

Canonical link: https://commits.webkit.org/108638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122135 268f45cc-cd09-0410-ab3c-d52691b4dbfc